--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6bcb38bd",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
-    "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8e0f3cf0",
    "metadata": {},
    "outputs": [
@@ -76,8 +78,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "65de9eae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.15767770055358\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DEFINIR ALPHA:\n",
+    "\n",
+    "nivel_alpha = 0.05\n",
+    "\n",
+    "# PRUEBA DE VARIANZA DE DATOS:\n",
+    "\n",
+    "pvalue_levene = stats.levene(dieta1, dieta2).pvalue\n",
+    "print(pvalue_levene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4a482699",
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +117,6 @@
     }
    ],
    "source": [
-    "# DEFINIR ALPHA:\n",
-    "\n",
-    "nivel_alpha = 0.05\n",
-    "\n",
     "# PRUEBA T-STUDENT:\n",
     "\n",
     "t_stat, p_valor = stats.ttest_ind(dieta1, dieta2)\n",
@@ -188,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "eecad0ca",
    "metadata": {},
    "outputs": [
@@ -216,8 +239,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "7aef84b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8039599174006208\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DEFINIR ALPHA:\n",
+    "\n",
+    "nivel_alpha = 0.05\n",
+    "\n",
+    "# PRUEBA DE VARIANZA DE DATOS:\n",
+    "\n",
+    "pvalue_levene = stats.levene(fertilizante1, fertilizante2, fertilizante3).pvalue\n",
+    "print(pvalue_levene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4f0e3107",
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +278,6 @@
     }
    ],
    "source": [
-    "# DEFINIR ALPHA:\n",
-    "\n",
-    "nivel_alpha = 0.05\n",
-    "\n",
     "# PRUEBA ANOVA:\n",
     "\n",
     "f_stats, p_valores = stats.f_oneway(fertilizante1, fertilizante2, fertilizante3)\n",
@@ -246,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b8e48ac2",
    "metadata": {},
    "outputs": [
@@ -280,19 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "cf9e0fe2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estadistica F: 20.3158\n",
-      "Valor P: 0.0001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DEFINICIÓN DE DATOS:\n",
     "\n",
@@ -302,21 +337,12 @@
     "\n",
     "rendimiento = np.concatenate([fertilizante1, fertilizante2, fertilizante3])\n",
     "\n",
-    "grupos = np.array([\"F1\"] * 5 + [\"F2\"] * 5 + [\"F3\"] * 5)\n",
-    "\n",
-    "# PRUEBA ANOVA:\n",
-    "\n",
-    "f_stat, p_valor = stats.f_oneway(fertilizante1, fertilizante2, fertilizante3)\n",
-    "\n",
-    "# MOSTRAR RESULTADOS:\n",
-    "\n",
-    "print(f\"Estadistica F: {f_stat:.4f}\")\n",
-    "print(f\"Valor P: {p_valor:.4f}\")"
+    "grupos = np.array([\"F1\"] * 5 + [\"F2\"] * 5 + [\"F3\"] * 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "b8c28c40",
    "metadata": {},
    "outputs": [
@@ -355,18 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4aa4673d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "7db35ac0",
    "metadata": {},
    "outputs": [
@@ -404,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "72d8f233",
    "metadata": {},
    "outputs": [
