--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6bcb38bd",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8e0f3cf0",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "id": "aa283977",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8164/3777575160.py:3: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  p_normal_dieta1 = stats.normaltest(dieta1).pvalue\n",
+      "/tmp/ipykernel_8164/3777575160.py:4: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  p_normal_dieta2 = stats.normaltest(dieta2).pvalue\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TEST DE NORMALIDAD:\n",
+    "\n",
+    "p_normal_dieta1 = stats.normaltest(dieta1).pvalue\n",
+    "p_normal_dieta2 = stats.normaltest(dieta2).pvalue\n",
+    "\n",
+    "print(p_normal_dieta1)\n",
+    "print(p_normal_dieta2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "65de9eae",
    "metadata": {},
    "outputs": [
@@ -103,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "4a482699",
    "metadata": {},
    "outputs": [
@@ -129,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "971b3006",
    "metadata": {},
    "outputs": [
@@ -211,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "eecad0ca",
    "metadata": {},
    "outputs": [
@@ -239,7 +274,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
+   "id": "58045d61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "nan\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8164/3755867164.py:3: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  p_normal_fertilizante1 = stats.normaltest(fertilizante1).pvalue\n",
+      "/tmp/ipykernel_8164/3755867164.py:4: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  p_normal_fertilizante2 = stats.normaltest(fertilizante2).pvalue\n",
+      "/tmp/ipykernel_8164/3755867164.py:5: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  p_normal_fertilizante3 = stats.normaltest(fertilizante3).pvalue\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TEST DE NORMALIDAD:\n",
+    "\n",
+    "p_normal_fertilizante1 = stats.normaltest(fertilizante1).pvalue\n",
+    "p_normal_fertilizante2 = stats.normaltest(fertilizante2).pvalue\n",
+    "p_normal_fertilizante3 = stats.normaltest(fertilizante3).pvalue\n",
+    "\n",
+    "print(p_normal_fertilizante1)\n",
+    "print(p_normal_fertilizante2)\n",
+    "print(p_normal_fertilizante3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7aef84b3",
    "metadata": {},
    "outputs": [
@@ -264,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "4f0e3107",
    "metadata": {},
    "outputs": [
@@ -290,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "b8e48ac2",
    "metadata": {},
    "outputs": [
@@ -324,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "cf9e0fe2",
    "metadata": {},
    "outputs": [],
@@ -342,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "b8c28c40",
    "metadata": {},
    "outputs": [
@@ -381,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "7db35ac0",
    "metadata": {},
    "outputs": [
@@ -419,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "72d8f233",
    "metadata": {},
    "outputs": [
